--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "hello-babel": "babel hello-babel.js | node"
+    "hello-babel": "babel hello-babel.js | node",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "7.2.0",
-    "@babel/preset-react": "^7.0.0"
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0",
+    "react-dom": "16.4.2"
   },
   "dependencies": {
     "@babel/cli": "7.2.0",
-    "figlet": "^1.2.4"
+    "figlet": "^1.2.4",
+    "react": "16.4.2"
   }
 }
