--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "hello-babel": "babel hello-babel.js | node",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . && prettier-eslint --list-different **/*.js",
+    "format": "prettier-eslint --write **/*.js"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -15,7 +16,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "23.6.0",
+    "eslint": "5.10.0",
+    "eslint-plugin-jest": "22.1.2",
+    "eslint-plugin-react": "7.11.1",
     "jest": "23.6.0",
+    "prettier-eslint-cli": "4.7.1",
     "react-dom": "16.4.2"
   },
   "dependencies": {
