--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@babel/cli": "7.2.0",
     "figlet": "^1.2.4",
+    "prop-types": "15.7.2",
     "react": "16.4.2"
   }
 }
