--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "lint": "eslint . && prettier-eslint --list-different **/*.js",
     "format": "prettier-eslint --write **/*.js",
-    "build": "webpack --config webpack.config.js --display-modules"
+    "build": "webpack --config webpack.config.js --display-modules",
+    "dev": "webpack-dev-server --config webpack.config.js --open"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -30,7 +31,8 @@
     "prettier-eslint-cli": "4.7.1",
     "react-dom": "16.4.2",
     "webpack": "4.26.1",
-    "webpack-cli": "3.1.2"
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.10"
   },
   "dependencies": {
     "@babel/cli": "7.2.0",
